--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
                 <img src="./image/Ellipse 52.png" alt="">
             </div>
             <h2 class="hero__text">
-                Build awesome <span>portfolio</span> <span>projects</span> together.
+                Build awesome <span>portfolio</span>  <br>
+                <span>projects</span> together.
             </h2>
-            <p class="hero__paragraph p-all">
+            <p class="hero__paragraph">
                 Get peered up with newbies in tech and build live potfolio 
-                projects together. Skip looking for internship, gain real live experience working with a team Now!
+                projects together. 
+                <br> Skip looking for internship, gain real live experience working with a team Now!
             </p>
             <button class="hero__btn">
                 <img src="./image/playImg.png" alt="">
@@ -91,7 +93,7 @@
     </section>
 
 
-    <section class="whoWeAre">
+    <section class="whoWeAre p-all">
         <div class="text-card">
             <h3 class="text-card__title">
                 Who we are
